# gendiff-hexlet

./: Makefile  README.md  pyproject.toml
.github/workflows/: linter-and-tests-check.yml
gendiff/: __init__.py  data_parser.py  diff.py  gendiff.py  helpers.py  stylish_formatter.py
gendiff/formatters/: helpers.py  json_formatter.py  plain_formatter.py  stylish_formatter.py
gendiff/scripts/: run.py
tests/: test_gendiff.py
